	* src/nact/nact-main-window.c:
	* src/nact/nact-tree-model.c:
	* src/plugin/nautilus-actions.c:
	* src/utils/nautilus-actions-new.c: Updated accordingly.

	* src/nact/nact-iactions-list.c (filter_selection,
	filter_selection_iter):	Controls the allowed selection so that
	we are only able to select profiles, or actions/menus.
	Define new nact_iactions_list_set_filter_selection_mode() api.

	* src/common/na-object.c:
	* src/common/na-object-fn.h
	(na_object_get_hierarchy, na_object_free_hierarchy): New functions.

	* src/nact/nact-main-window.c (nact_main_window_delete_selection):
	Renamed to nact_main_window_move_to_deleted().

	* src/nact/nact-main-tab.c: Removed (unused) file.

	* src/nact/nact-main-menubar.c: Remove <Ctrl+M> accelerator to let
	actions be the main selectable items.

2009-09-16 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac:
	Remove NAUTILUS_ACTIONS_CONFIG_GCONF_BASEDIR (not a configuration
	variable).

	* src/common/na-action.c: Renamed as na-obj-action.c.
	* src/common/na-action.h: Renamed as na-obj-action.h.
	* src/common/na-action-class.h:	Renamed as na-obj-action-class.h.
	Takes part of renaming NAAction class to NAObjectAction.

	* src/common/na-action-profile.c: Renamed as na-obj-profile.c.
	* src/common/na-action-profile.h: Renamed as na-obj-profile.h.
	* src/common/na-action-profile-class.h:
	Renamed as na-obj-profile-class.h.
	Takes part of renaming NAActionProfile class to NAObjectProfile.

	* src/common/na-action-menu.c: Renamed as na-obj-menu.c.
	* src/common/na-action-menu.h: Renamed as na-obj-menu.h.
	Takes part of renaming NAActionMenu class to NAObjectMenu.

	* src/common/na-gconf.c: Renamed as na-gconf-provider.c.
	* src/common/na-gconf.h: Renamed as na-gconf-provider.h.
	Takes part of NAGConf class to NAGConfProvider.
	This let us clearly identify the rule of the class, distinguishing
	it from GConf as a preferences repository.

	* src/common/na-gconf-key.h: Splitted in na-gconf-keys-base.h,